vendor/thiserror-1.0.24/tests/ui/duplicate-fmt.stderr
error: only one #[error(...)] attribute is allowed
 --> $DIR/duplicate-fmt.rs:5:1
  |
5 | #[error("...")]
  | ^^^^^^^^^^^^^^^
