vendor/thiserror-1.0.24/tests/ui/duplicate-fmt.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[error("...")]
#[error("...")]
pub struct Error;

fn main() {}
